--- a/src/style/App.css
+++ b/src/style/App.css
@@ -6,8 +6,9 @@
 }
 
 .mainTitle {
+    font-family: 'Space Grotesk', sans-serif;
     font-size: 56px;
-    font-weight: 900;
+    font-weight: 700;
     margin: 0;
     display: flex;
     justify-content: center;
